--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,3 @@
-/* HTML ELEMENTS */
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +9,7 @@
   --second-color: #0B6B8B;
   --tag-color: #B557DA;
   --prime-font: 'Alata', sans-serif;
-  --second-font: 'Roboto', sans-serif ;
+  --second-font: 'Roboto', sans-serif;
 }
 
 /*  CSS INDEX 
@@ -19,7 +18,6 @@
   3. SMALL CARD
   4. FOOTER
 */
-
 
 /* RESPONSIVE SECTION */
 /* Extra small devices (300-600 px) */
@@ -496,14 +494,14 @@
 
   .corner-ribbon{
     width: 350px;
-    background: #e43;
+    background: var(--prime-color);
     position: absolute;
     top: 180px;
     left: -90px;
     text-align: center;
     line-height: 50px;
     letter-spacing: 1px;
-    color: #f0f0f0;
+    color: #fff;
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     z-index: 1;
@@ -523,7 +521,6 @@
     left: -90px;
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
-    z-index: 1;
     font-family: var(--prime-font);
   }
 
