moved img folder so netlify will find them

--- a/code/style.css
+++ b/code/style.css
@@ -64,7 +64,7 @@
   }
 
   .large-card > article {
-    background-image: url("../img/DT_2020_CROPPED.jpg");
+    background-image: url("img/DT_2020_CROPPED.jpg");
     background-size: cover;
     height: 40vh;
   }
@@ -487,7 +487,7 @@
   }
 
   .large-card > article {
-    background-image: url("../img/DT_2020_CROPPED.jpg");
+    background-image: url("img/DT_2020_CROPPED.jpg");
     background-size: cover;
     height: 80vh;
   }
