--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,320 @@
+/* Styling for the whole page */
 html {
-  background: #0025ff;
-  color: #fff;
+  margin: 0;
 }
+
+body {
+  background-color: #24292d;
+  margin: 0;
+  display: block;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+h1 {
+  color:#fff;
+  font-size: 32px;
+  font-family: 'Poppins', sans-serif;
+  padding: 10px;
+}
+
+h2 {
+  color:#fff;
+  font-size: 20px;
+  padding: 10px;
+}
+
+
+p {
+  color:#fff;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  
+}
+
+
+footer {
+  height: 200px;
+  width: 100%;
+  background-color: #666d73;
+}
+
+a:link {
+  color: #fff;
+  text-decoration: underline;
+}
+
+a:hover {
+  color:#ff66a9;
+  
+}
+
+a:active {
+  color: #5d7900;
+}
+
+
+/* Styling of the responsive navbar */
+
+header {
+  height: 200px;
+  width: 100%;
+  background-color: #666d73;
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  padding: 0 16px;
+  margin: auto;
+}
+
+
+nav {
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  display: none;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-left: 16px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background-color: white;
+}
+
+.name {
+  font-size: 24px;
+  margin-right: 20px;
+ 
+}
+
+.logo {
+  display:inline-block;
+  height: 100px;
+  width: auto;
+  display: none;
+}
+ 
+.logosmall {
+  height: 75px;
+  display: inline-block;
+  margin: 0;
+}
+
+
+/* Styling for the main section of the page*/
+
+
+main {
+  width: 100%;
+  background-color:#24292d;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap; 
+  justify-content: space-evenly;
+  font-family: 'Roboto', sans-serif; 
+}
+
+
+button {
+  height: 40px;
+  display: block;
+  padding: 10px;
+  background-color: #fff;
+  color:#24292d;
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 20px;
+  margin-left: 5px;
+}
+
+img:hover {
+  background-color: #ffd0de;
+  opacity: 0.6;
+}
+
+.small-news {
+  height: fit-content;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+
+.big-news {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  margin: 20px;
+  text-align: flex-start;
+}
+
+.big-news-container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+
+.big-news-picture {
+  box-sizing: border-box;
+  padding: 20px;
+  background: white;
+  box-shadow: 0 1px 2px rgba(0,0,0,.15), 0 2px 5px rgba(0,0,0,.05);
+  width: 350px;  
+  height: auto; 
+  margin: 20px;
+}
+
+.small-news-picture {
+  box-sizing: border-box;
+  padding: 20px;
+  background: white;
+  box-shadow: 0 1px 2px rgba(0,0,0,.15), 0 2px 5px rgba(0,0,0,.05);
+  width: 285px;  
+  height: auto; 
+}
+
+
+
+/* Styling footer */
+
+.p-footer {
+  color:#fff;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  padding-left: 10px;
+  padding-top: 20px;
+}
+
+.flaticon {
+  color:#fff;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  padding-left: 10px;
+}
+
+.contact{
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 30px;
+}
+/*** Media Queries ***/
+
+/***tablet  ***/
+
+@media (min-width: 650px) {
+  header {
+    height: 200px;
+    width: auto;
+    background-color: #666d73;
+  }
+
+  nav {
+    display: flex;
+    align-items: center;
+    align-content: space-between;
+    
+  }
+  
+  nav a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .name {
+    display: inline;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .logo {
+    display: inline-block;
+    margin-left: 25px;
+  }
+
+  .logosmall {
+    display: none;
+  }
+
+  main {
+    width: 100%;
+    background-color:#24292d;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    flex-wrap: wrap; 
+    justify-content: space-evenly;
+    font-family: 'Roboto', sans-serif; 
+  }
+}
+
+/*** desktop ***/
+
+@media (min-width: 900px) {
+
+
+  .hamburger {
+    display: none;
+  }
+
+  .name {
+      display: inline;
+    }
+
+  main {
+    width: 100%;
+    background-color:#24292d;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    flex-wrap: wrap; 
+    justify-content: space-evenly;
+    font-family: 'Roboto', sans-serif; 
+    }  
+  
+  .big-news-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+  }
+
+  .big-news {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    margin: 20px;
+    text-align: flex-start;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .logosmall {
+    display: inline;
+
+}
+
+
