--- a/code/style.css
+++ b/code/style.css
@@ -141,22 +141,86 @@ figure img{
 
 
 /* BIG NEWS */
-article{
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  max-width: 1000px;
-  max-height: 500px;
+ article {
+	 margin: auto;
+	 display: flex;
+	 justify-content: center;
+	 max-width: 1000px;
+	 max-height: 500px;
 }
-
-article img{
-  object-fit: cover;
-  margin-bottom: 2rem;
+ article img {
+	 object-fit: cover;
 }
-
-.big-news-text-block{
-  
+ .tiles .tile {
+	 display: inline-block;
+	 text-align: left;
+	 opacity: 0.99;
+	 overflow: hidden;
+	 position: relative;
 }
+ .tiles .tile:before {
+	 content: '';
+	 background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+	 width: 100%;
+	 height: 50%;
+	 opacity: 0;
+	 position: absolute;
+	 top: 100%;
+	 left: 0;
+	 z-index: 2;
+	 transition-property: top, opacity;
+	 transition-duration: 0.3s;
+}
+ .tiles .tile img {
+	 display: block;
+	 max-width: 100%;
+	 backface-visibility: hidden;
+	 -webkit-backface-visibility: hidden;
+}
+ .tiles .tile .details {
+	 font-size: 16px;
+	 padding: 20px;
+	 color: #fff;
+	 position: absolute;
+	 bottom: 0;
+	 left: 0;
+	 z-index: 3;
+}
+ .tiles .tile .details span {
+	 display: block;
+	 opacity: 0;
+	 position: relative;
+	 top: 100px;
+	 transition-property: top, opacity;
+	 transition-duration: 0.3s;
+	 transition-delay: 0s;
+}
+ .tiles .tile .details .title {
+	 line-height: 1;
+	 font-weight: 600;
+	 font-size: 18px;
+}
+ .tiles .tile .details .info {
+	 line-height: 1.2;
+	 margin-top: 5px;
+	 font-size: 12px;
+}
+ .tiles .tile:focus:before, .tiles .tile:hover:before, .tiles .tile:focus span, .tiles .tile:hover span {
+	 opacity: 1;
+}
+ .tiles .tile:focus:before, .tiles .tile:hover:before {
+	 top: 50%;
+}
+ .tiles .tile:focus span, .tiles .tile:hover span {
+	 top: 0;
+}
+ .tiles .tile:focus .title, .tiles .tile:hover .title {
+	 transition-delay: 0.15s;
+}
+ .tiles .tile:focus .info, .tiles .tile:hover .info {
+	 transition-delay: 0.25s;
+}
+ 
 
 /* MAIN CONTENT */
 main{
