--- a/code/style.css
+++ b/code/style.css
@@ -46,6 +46,7 @@ img {
   width: 50%;
   border-radius: 20px;
   margin: 10px;
+  align-self: flex-end;
 }
 
 img.headline {
@@ -78,7 +79,6 @@ h1:hover {
 h2 {
 font-family: 'Alata', sans-serif;
 font-size: 40px;
-
 align-self: flex-start;
 padding: 10px 15px;
 }
@@ -95,7 +95,6 @@ h2:hover {
   margin: 5px;
   display: flex;
 }
-
 
 .big-news p {
   display: flex;
@@ -129,6 +128,25 @@ h3:hover {
   opacity: 0.7;
 }
 
+label {
+  font-family: 'Alata', sans-serif;
+  color: grey;
+}
+
+input {
+  width: 200px;
+  margin: 5px;
+}
+
+button {
+  width: 60px;
+  opacity: 0.9;
+}
+
+.form {
+  padding: 20px ;
+}
+
 footer {
   border-top: 5px solid gray;
   opacity: 0.4;
@@ -144,7 +162,6 @@ footer {
     width: 100%;
     height: auto;
     position: relative;
-    /* background-image: url('pawprint.jpg'); */
   }
 
   .sidebar a {
@@ -168,13 +185,11 @@ footer {
   .flex-parent {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
   }
 
   .flex-parent p {
     width: 60%;
-    /* justify-items: center; */
   }
 
   .cutest {
@@ -192,7 +207,6 @@ footer {
   .snow {
     width: 50%;
   }
-
   
 }
 
@@ -230,17 +244,19 @@ footer {
 
   img.headline {
     width: 90%;
+    align-items: center;
+    justify-content: center;
   }
+
   img {
     width: 80%;
     align-items: center;
-    /* box-shadow: 5px 5px 8px rgb(168, 163, 163); */
   }
 
   .big-news {
     display: block;
     border: 8px solid hsl(327, 28%, 74%);
-    /* border-radius: 0%; */
+    align-items: center;
   }
 
   .flex-parent {
@@ -248,6 +264,8 @@ footer {
     width: 90%;
     border: 2px solid hsl(327, 28%, 74%);
     border-radius: 0%;
+    justify-content: center;
+    align-items: center;
   }
 
   .cutest {
