--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,232 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  display: flex; 
+  flex-direction: column;  
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  background-color: #eceaf0;
 }
+
+img {
+  width: 100%;
+}
+
+/** Header **/
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  background-color: rgb(146, 169, 247);
+  padding: 30px;
+  width: 100%;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+}
+
+nav a {
+  display: none;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #fff;
+  border-radius: 5px;
+}
+
+
+/**Big news**/
+section {
+display:flex;
+flex-direction: column;
+}
+
+
+/** small news**/
+article {
+  padding: 10px;
+  margin: 10px;
+}
+
+h2 {
+  font-size: 300;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+.header-logo {
+  width: 30%; 
+ }
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.big-news {
+  padding: 5px;
+  display: row;
+}
+
+.big-news-title {
+  font-weight: 800;
+  /* display: flex;
+  align-content: center; */
+}
+
+.big-news-img {
+  width: 100%;
+}
+
+.big-news div {
+  text-align: center;
+}
+
+.small-news {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.small-news img {
+  width: 100%;
+}
+
+/*** Media Queries ***/
+
+@media (min-width: 650px) and (max-width: 1024px) {
+
+  header {
+    display: flex;
+    align-content: center;
+  }
+
+  nav a {
+    display: flex;
+    padding: 1em;
+    text-decoration: none;
+    font-size: larger;
+    margin: 10px;
+    align-items: stretch;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+section {
+    display:flex;
+    flex-direction: row;
+    margin: 10px;
+    }
+
+article {
+      margin: 10px;
+      padding: 10px;
+    }
+
+h2 {
+  font-size: medium;
+} 
+
+p {
+  padding: 20px;
+}
+
+.header-logo {
+  width: 10%;
+  display: flex;
+  flex-direction: row;
+  padding: 15px 10px;
+  order:1;
+}
+
+.part-2 {
+  order:2;
+}
+
+.big-news .container {
+  display: flex;
+  align-items: center; 
+}
+
+.small-news {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.small-news article {
+  width: 25%;
+  flex-grow: 1;
+  margin: 16px;
+  background: #fff;
+}
+
+}
+
+@media (min-width: 1025px) {
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+nav a {
+  display: flex;
+  padding: 1em;
+  text-decoration: none;
+  font-size: larger;
+  margin: 10px;
+}
+
+.hamburger {
+  display: none;
+}
+
+.header-logo {
+  width: 10%;
+  display: flex;
+  flex-direction: row;
+  padding: 15px 10px;
+}
+
+section {
+  display:flex;
+  flex-direction: row;
+  }
+
+  .big-news-img {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .small-news {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .small-news article {
+    width: 10%;
+    flex-grow: 1;
+    margin: 16px;
+    background: #fff;
+  }
+
+}
+
+
