--- a/code/style.css
+++ b/code/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 header h1{
-/*  display: none; */
   font-size: 30px;
   line-height: 20px;
   font-family: 'Times New Roman', Times, serif;
@@ -15,12 +14,6 @@ h2{
   font-size: 30px;
   line-height: 16px;
 }
-
-/* .container {
-  max-width: 1100px;
-  margin: 0 auto;
-  width: 100%;
-} */
 
 /*** HEADER ***/
 
@@ -49,7 +42,7 @@ nav a {
   margin-left: 10px;
 }
 
-#date {
+.date {
   color: grey;
   text-align: left;
   font-size: 12px;
@@ -130,6 +123,15 @@ footer {
   justify-content: space-between;
 }
 
+footer p {
+  margin-left: 20px;
+  }
+  
+
+footer nav {
+margin-right: 20px;
+}
+
 /*** MEDIA QUERIES ***/
 @media (min-width:650px) {
 
@@ -186,7 +188,7 @@ footer {
   header h1{
     display: inline-block;
     font-size: 70px;
-    line-height: 16px;
+    line-height: 16px; 
   }
 
   .logo {
@@ -197,20 +199,14 @@ footer {
     display: inline-block;
     }
 
-
     .big-news {
       display: flex;
       flex-direction: row;
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      margin: 0 50px 50px 50px;
+      margin: 0px 80px 80px 80px;
       justify-content: space-around;
-      align-items: center;
-      background-color: #F6F6F6;
     }
+
     
-    .big-news img {
-      width: 100%;
-    }
     
     .big-news div {
       text-align: left;
@@ -218,7 +214,7 @@ footer {
     }
   
     .big-news .heading {
-      padding: 20px 20px 0px 20px;
+      padding: 10px 10px 0px 10px;
       font-size: 40px;
       line-height: 1.1;
       }
@@ -240,4 +236,6 @@ footer {
   margin-bottom: 40px;
 }
 
+.other-news a:hover {
+  transform: scale(1.1);
 }
