--- a/code/style.css
+++ b/code/style.css
@@ -1,10 +1,15 @@
 body {
-  background: #0025ff;
+  background: white;
   color: #fff;
   margin: 0;
 }
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-size: 45px;
+  color: black;
+  margin: 5px 10px 15px 10px;
+  display: inline-block
 }
 p {
   font-family: 'Times New Roman', Times, serif;
@@ -13,8 +18,8 @@ p {
 /***** Header *****/
 
 header {
-  background-color: darkred;
-  height: 100px;
+  background-color: white;
+  height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,37 +27,51 @@ header {
 }
 
 .logo {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
 }
 
 nav {
-  border: 1px solid blue;
-  width: 50%;
-  display: flex;
-  justify-content: space-between;
-
-}
-img {
+  border: 1px solid white;
   width: 90%;
-  height: 90%;
+  display: flex;
+  justify-content: space-around;
+
+}
+/***** BIG NEWS *****/
+.big-news {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  margin: 20px;
+}
+.main-news-img {
+  width: 70%;
+  justify-content: center;
+  margin-top: 10px;
 }
 
+/***** NEWS GRID *****/
+.news-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+}
 @media (max-width: 667px) {
-.order-1{
-  order:1;
-}
-.order-2{
-  order:2;
-}
+  body {
+    flex-direction: row;
+    background-color: lightslategray;
+    flex-wrap: wrap;
+  }
+  img {
+    width: 90%;
+  }
 }
 
 @media (min-width: 667px) and (max-width: 1024px) {
   body {
     flex-direction: row;
-    background-color: darkred;
+    background-color: lightslategray;
     flex-wrap: wrap;
   }
   img {
@@ -62,17 +81,17 @@ img {
 @media (min-width: 1024px) {
   body {
     flex-direction: row;
-    background-color: white;
+    background-color: lightslategray;
   }
   img {
-    width: 40%;
+    width: 23%;
   }
 }
 
 
-/***** BIG NEWS *****/
 
 
 
 
-/***** NEWS GRID *****/
+
+
