--- a/code/style.css
+++ b/code/style.css
@@ -3,65 +3,95 @@ body {
   background: #fdd6cc;
   color: #2a2828;
   margin: 0;
+  width: 100%;
 }
 
-/* header {
+h2 {
+  font-size: 3em;
+  letter-spacing: 0.2em;
+  text-align: left;
+  padding-left: 0;
+  margin: 0em 2em;
+}
+
+/***** HEADER *****/
+
+header {
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   text-decoration: none;
-  background-color: darkgoldenrod;
-} */
-
-.navbar-all {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  text-decoration: none;
-  background-color: darkgoldenrod;
-  display: block;
 }
-
-
-h1 {
-  font-size: 6em;
-  text-align: center;
-  font-weight: 700;
-  margin-top: 40px;
-}
-
 
 a {
   color: #4357f0;
   text-decoration: none;
 }
 
+/* .navbar-all {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+} */
+
+
+.black-logo-top {
+  max-width: 200px;
+  max-height: 200px;
+  padding: 1em 1em;
+}
+
+.menu-toggle {
+  /* width: 100px; */
+  font-size: 2em;
+  color: #4357f0;
+  padding: 1em;
+  }
+
+
+
+/****** BIG-NEWS ******/
+
+h1 {
+  font-size: 2.5em;
+  color: deeppink;
+  text-align: center;
+  font-weight: 700;
+  margin: 0.2em 0.1em 0.3em 0.1em;
+}
+
 i {
   padding: 8px;
 }
 
-.big-news h1 {
-  font-size: 2.5em;
-  color: deeppink;
+h4 {
+  font-weight: 400;
+  font-style: italic;
+  text-align: center;
+  color: #2a2828;
+  margin:0em 0.5em 1em 0.5em;
 }
 
-.big-news img {
+.glacier-img {
   width: 100%;
+  position: relative;
 }
 
-.navbar {
-  /* display: none; */
-}
+/******* PROFILE ARTICLES *******/
+
 
 .portrett img {
-  padding: 40px;
+  padding: 2em 4em 4em 4em;
   width: 80%;
+  max-width: 480px;
   display: flex;
   justify-content: center;
   margin: 0;
 }
+
+/******* MOST READ SECTION *******/
 
 .most-read img {
   padding: 0px 40px 10px 40px;
@@ -72,14 +102,19 @@ i {
 }
 
 .most-read h3 {
+  color: #2a2828;
+  text-align: left;
   padding: 0px 40px 10px 40px;
   margin: 0;
 }
 
 .most-read h4 {
+  text-align: left;
   font-style: italic;
   margin: 0 40px 40px 40px;
 }
+
+/******** THE GALLERY ********/
 
 .gallery-span {
   text-align: center;
@@ -97,14 +132,6 @@ i {
   font-style: italic;
 }
 
-
-.menu-toggle {
-/* width: 100px; */
-font-size: 2em;
-color: #4357f0;
-padding: 2em;
-}
-
 .arrow {
   height: 30px;
   display: flex;
@@ -112,31 +139,115 @@ padding: 2em;
   background-color: coral;
 }
 
+#arrows {
+  display: flex;
+  justify-content: center;
+}
+
+/********** THE ARTICLES *********/
+
+.articles img {
+  padding: 0px 40px 10px 40px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.articles h3 {
+  color: #2a2828;
+  text-align: left;
+  padding: 0px 40px 10px 40px;
+  margin: 0;
+}
+
+.articles h4 {
+  text-align: left;
+  font-style: italic;
+  margin: 0 40px 40px 40px;
+}
+
+
+/*********** BORDER STYLE *******/
+
+
 hr.style-four {
   height: 12px;
   border: 0;
   box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.1);
 }
 
-#arrows {
+/********** FOOTER ***********/
+
+img.black-logo-bottom {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 100px;
+  max-height: 100px;
+  padding: 1em 1em;
+  /* background-color: aquamarine; */
+  margin: 0;
 }
 
-#black-logo-top {
-  max-width: 200px;
-  max-height: 200px;
-  padding: 1em 0em;
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  text-decoration: none;
 }
 
-@media (min-width: 667px) and (max-width: 1024) {
+section.footer p {
+  font-size: 8px;
+  text-align: center;
+  padding-bottom: 6em;
+}
+
+.subscription {
+  background-color: #4357f0;
+  padding: 0.5em;
+  color: white;
+  border-radius: 4px;
+  border: none;
+  max-width: 80px;
+}
+
+section.footer-links ul {
+  list-style-type: none;
+  font-size: 12px;
+  color: #4357f0;
+  line-height: 1.8em;
+  font-weight: 900;
+}
+
+img.technigo-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30px;
+  height: 30px;
+  padding: 1em;
+  margin-bottom: 1.5em;
+  
+}
+
+/****** MEDIA QUERIES ******/
+
+@media (max-width: 666px) {
+  .navbar {
+    display: none;
+  }
+}
+
+
+
+@media (min-width: 667px) {
   .menu-toggle {
     display: none;
-  } 
-}
-
-@media (min-width: 1025px) {
-.menu-toggle {
-  display: none;
-}
+  }
+  .portrett-sec {
+    display: flex;
+    justify-content: center;
+  }
 }
