--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,257 @@
-html {
-  background: #0025ff;
+body {
+  background-image: url('https://images.unsplash.com/photo-1507038524381-86c8373039ca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: #fff;
+  font-family: Helvetica, sans-serif;
+  margin: 0;
+}
+
+/*** TYPO ***/
+
+h1 {
+background-color: #000;
+color: #fff;
+font-size: 30px;
+padding: 5px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 26px;
+}
+
+h4 {
+  font-size: 32px;
+  font-weight: 100;
+  margin-top: -16px;
+  margin-bottom: 16px;
+}
+
+a {
+  color: #da008a;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #4100da;
+  text-decoration: none;
+}
+
+.container {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+/*** HEADER ***/
+
+header {
+  background-color: #000;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px; /*just horizontal padding*/
+}
+
+header img {
+  width: 80px;
+  padding: 16px;
+}
+
+
+/*** NAV ***/
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+  padding: 10px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background-color: #fff;
+  margin: 5px;
+}
+
+nav {
+  display: none;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 16px;
+}
+
+nav a:hover {
+  color: #da008a;
+}
+
+/*** MAIN ARTICLE ***/
+
+.main-container .container {
+  padding: 50px 0px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.main-container img {
+  background-color: #fff;
+  width: 100%;
+  border: 2px solid #000;
+  padding: 5px;
+  margin: 16px;
+}
+
+.main-container div {
+background-color: #000;
+width: 50%;
+text-align: center;
+margin: 16px;
+padding: 16px;
+}
+
+/*** CHALLENGES CONTAINER ***/
+
+.newscard-container {
+  background-color: #fff;
+  color: #000;
+  text-align: center;
+  padding: 24px;
+}
+
+.newscard {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newscard a {
+  background: #fafafa;
+  border: 2px solid #000;
+  width: 100%;
+  text-decoration: none;
+  color: #000;
+  box-shadow: 12px 12px 0 0 #000;
+  padding: 5px;
+  margin-bottom: 32px;
+}
+
+.newscard a div {
+  border: 2px solid #000;
+  padding: 5px;
+}
+
+.newscard a img{
+  height: 200px;
+  width: 80%;
+  object-fit: cover;
+}
+
+
+footer {
+  background-color: #000;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  padding: 16px 24px; /*just horizontal padding*/
+}
+
+footer img {
+  width: 80px;
+  padding: 16px;
+}
+
+/*** MEDIA QUERY ***/
+
+/*** MOBILE **/
+@media (min-width: 300px) {
+header {
+  justify-content: space-between;
+}
+  nav {
+    display: none;
+  }
+
+  .hamburger {
+    display: inline;
+  }
+
+  .main-container div {
+    text-align: left;
+  }
+
+  .main-container img {
+    width: 70%;
+  }
+
+  .newscard a img{
+  height: 200px;
+  width: 80%;
+  object-fit: cover;
+}
+}
+
+/*** TABLET **/
+@media (min-width: 700px) {
+
+  nav {
+    display: inline-block;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .main-container .container {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .main-container .container img {
+    width: 50%;
+  }
+
+  .newscard a {
+    width: 30%;
+    flex-grow: 1;
+    margin: 16px;
+  }
+}
+
+/*** DESKTOP ***/
+@media (min-width: 1300px) {
+
+  nav {
+    display: inline-block;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .main-container .container {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .main-container .container img {
+    width: 50%;
+    display: inline;
+  }
+
+  .newscard a {
+    width: 20%;
+    flex-grow: 1;
+    margin: 16px;
+  }
 }
