--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,282 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: #ffabc2;
+  color: #2756c8;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+}
+
+h1 {
+  font-size: 5.5vw;
+  font-weight: 150;
+  font-family: "Major Mono Display", monospace;
+  white-space: nowrap;
+}
+
+h2 {
+  font-size: 3.5vw;
+  font-family: "Major Mono Display", monospace;
+  color: #0484e8;
+  margin: 0 0 20px 0;
+}
+
+h3 {
+  font-size: 3.5vw;
+  color: #6dc9f7;
+  font-family: "Major Mono Display", monospace;
+  margin: 20px 0 10px 0;
+  text-align: center;
+}
+
+p {
+  font-size: 2vw;
+  margin: 10px 0 0 0;
+  text-align: justify;
+}
+
+/*** HEADER ***/
+
+header {
+  background: #fce8ce;
+  display: flex;
+}
+
+.left-header-container {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.hamburger {
+  display: flex;
+  width: 15px;
+  height: 16px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger div {
+  width: 20px;
+  height: 4px;
+  border-radius: 3px;
+  background: #2756c8;
+}
+
+header img {
+  width: 25px;
+  margin: 0 0 0 10px;
+  display: flex;
+  align-items: center;
+}
+
+nav {
+  display: none;
+}
+
+nav h1 {
+  display: none;
+}
+
+nav a {
+  text-decoration: none;
+  color: #2756c8;
+  white-space: normal;
+}
+a {
+  white-space: nowrap;
+}
+.container-upliftingnews {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
+.center-news-containers {
+  display: flex;
+  flex-direction: column;
+}
+
+/*** BIG NEWS CONTAINER ***/
+.big-news-container {
+  background: #fce8ce;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 25px auto;
+  width: 90%;
+  background: 5px 10px #fce8ce;
+  box-shadow: 5px 10px #ad7c59;
+}
+.big-news-container img {
+  width: 100%;
+  /* border-radius: 0px; */
+}
+
+/*** SMALL NEWS CONTAINER ***/
+
+.small-news {
+  display: flex;
+  justify-content: center;
+}
+
+.small-news-container {
+  margin-top: 10px;
+  justify-content: flex-start;
+  margin: 10px auto;
+  width: 95%;
+}
+
+.small-news-card {
+  background: 5px 10px #fce8ce;
+  box-shadow: 5px 10px #ad7c59;
+  margin: 20px;
+}
+
+.small-news-card div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.small-news-card img {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  border-radius: 50px;
+  padding: 10px;
+}
+
+a:hover {
+  color: #6dc9f7;
+}
+
+/*** MEDIA QUERIES ***/
+@media (min-width: 650px) {
+  header {
+    padding: 20px 0;
+  }
+
+  header nav {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+
+  .left-header-container {
+    display: none;
+  }
+
+  nav h1 {
+    display: flex;
+    margin: 0;
+  }
+  h1 {
+    display: none;
+  }
+
+  .container-upliftingnews {
+    display: none;
+  }
+
+  .small-news-container {
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: row;
+    align-content: center; */
+  }
+
+  .small-news-card {
+    width: 43%;
+  }
+}
+
+@media (min-width: 900px) {
+  header nav {
+    /* display: flex;
+    flex-wrap: wrap;
+    flex-direction: row; */
+    justify-content: flex-end;
+  }
+
+  nav a {
+    margin-left: 3vw;
+    font-size: 1.5vw;
+  }
+
+  header {
+    margin-top: 20px;
+    padding: 10px;
+  }
+
+  nav h1 {
+    display: none;
+  }
+
+  h1 {
+    display: flex;
+    margin: 0;
+  }
+  h3 {
+    font-size: 2.5vw;
+  }
+
+  header img {
+    width: 50px;
+    margin: 0 10px 0 0;
+    display: flex;
+    align-items: flex-end;
+  }
+  .left-header-container {
+    display: flex;
+    margin: 0;
+  }
+  .hamburger {
+    display: none;
+  }
+
+  .container-upliftingnews {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .big-news-container {
+    /* max-width: 1800px; */
+    margin: 20px auto;
+  }
+
+  .big-news-container div {
+    display: flex;
+    margin: 0 auto;
+  }
+
+  h2 {
+    margin: 20px;
+    /* font-size: 40px; */
+  }
+
+  p {
+    font-size: 1.5vw;
+  }
+  .big-news-container p {
+    margin: 20px 20px 20px 0;
+    width: 100%;
+    height: auto;
+  }
+
+  .big-news-container img {
+    width: 50%;
+    height: auto;
+    margin: 20px;
+  }
+
+  .small-news-card {
+    width: 22.6%;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .small-news-card:hover {
+    transform: scale(1.1);
+  }
 }
