--- a/code/style.css
+++ b/code/style.css
@@ -103,12 +103,12 @@ a {
   flex-direction: column;
   margin: 25px auto;
   width: 90%;
-  background: 5px 10px #fce8ce;
   box-shadow: 5px 10px #ad7c59;
 }
 .big-news-container img {
   width: 100%;
-  /* border-radius: 0px; */
+  box-shadow: 5px 10px #ad7c59;
+  border-radius: 5px;
 }
 
 /*** SMALL NEWS CONTAINER ***/
@@ -141,7 +141,7 @@ a {
   width: 90%;
   display: flex;
   align-items: center;
-  border-radius: 50px;
+  border-radius: 15px;
   padding: 10px;
 }
 
@@ -181,8 +181,6 @@ a:hover {
   .small-news-container {
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction: row;
-    align-content: center; */
   }
 
   .small-news-card {
@@ -192,9 +190,6 @@ a:hover {
 
 @media (min-width: 900px) {
   header nav {
-    /* display: flex;
-    flex-wrap: wrap;
-    flex-direction: row; */
     justify-content: flex-end;
   }
 
@@ -240,7 +235,6 @@ a:hover {
   }
 
   .big-news-container {
-    /* max-width: 1800px; */
     margin: 20px auto;
   }
 
@@ -251,7 +245,6 @@ a:hover {
 
   h2 {
     margin: 20px;
-    /* font-size: 40px; */
   }
 
   p {
@@ -267,6 +260,10 @@ a:hover {
     width: 50%;
     height: auto;
     margin: 20px;
+  }
+
+  .big-news-container img:hover {
+    transform: scale(1.04);
   }
 
   .small-news-card {
