--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,9 @@
+/* html {
+  margin: 0;
+  width: 100%;
+} */
+
+
 body {
   font-family: 'Roboto Mono', monospace;
   background: #fdd6cc;
@@ -7,11 +13,13 @@ body {
 }
 
 h2 {
-  font-size: 3em;
+  font-size: 2em;
   letter-spacing: 0.2em;
   text-align: left;
-  padding-left: 0;
-  margin: 0em 2em;
+  padding-left: 1em;
+  padding-bottom: 1em;
+  padding-top: 1em;
+  margin: 0;
 }
 
 /***** HEADER *****/
@@ -72,36 +80,60 @@ h1 {
   margin: 0.2em 0.1em 0.3em 0.1em;
 }
 
-i {
-  padding: 8px;
-}
-
 h4 {
   font-weight: 400;
   font-style: italic;
   text-align: center;
   color: #2a2828;
-  margin:0em 0.5em 1em 0.5em;
+  margin:0em 0.5em 2em 0.5em;
 }
 
-.glacier-img {
-  width:90%;
-  padding: 2em;
+img.glacier-img {
+  width:100%;
   display: flex;
   justify-content: center;
-  position: relative;
+  /* position: relative; */
 }
+
+.big-news {
+  padding-bottom: 0em;
+}
+
 
 /******* PROFILE ARTICLES *******/
 
+/* .portrett-all {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+} */
+
+a.portrett .portrett {
+  display: flex;
+  align-items: center;
+}
 
 .portrett img {
-  padding: 2em 4em 4em 4em;
+  padding: 0px 40px 10px 40px;
+  /* padding: 2em 4em 4em 4em; */
   width: 80%;
   max-width: 480px;
   display: flex;
-  justify-content: center;
+  /* align-items: center; */
   margin: 0;
+}
+
+.portrett h3 {
+  color: #2a2828;
+  text-align: left;
+  padding: 0px 40px 10px 40px;
+  margin: 0;
+}
+
+.portrett h4 {
+  text-align: left;
+  font-style: italic;
+  margin: 0 40px 40px 40px;
 }
 
 /******* MOST READ SECTION *******/
@@ -129,33 +161,50 @@ h4 {
 
 /******** THE GALLERY ********/
 
-.gallery-span {
+.gallery-section h3 {
+  color: #2a2828;
+  font-size: 1.5em;
   text-align: center;
-}
-
-.gallery-span img {
-  padding: 40px;
-  width: 80%;
-  display: flex;
-  justify-content: center;
+  padding: 0px 40px 10px 40px;
   margin: 0;
 }
-
-.gallery-span h4 {
+.gallery-selection h4 {
   font-style: italic;
+  line-height: 4em;
 }
 
+.gallery-section {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.gallery-section img {
+  display: block;
+  padding: 0 40px 10px 40px;
+  width: 80%;
+  max-height: 679px;
+  /* display: flex;
+  justify-content: center; */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
 .arrow {
-  height: 30px;
+  height: 1.5em;
   display: flex;
   flex-wrap: nowrap;
   background-color: coral;
 }
 
-#arrows {
-  display: flex;
-  justify-content: center;
+i {
+  padding: 8px;
+  font-size: 2em;
 }
+
 
 /********** THE ARTICLES *********/
 
