Added links on news parts adn cleaned up code

--- a/code/style.css
+++ b/code/style.css
@@ -2,7 +2,7 @@ body {
   background: #181d20;
   background: url(img/papyrus-dark.png);
   color: white;
-  font-family: Helvetica;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
 }
 
@@ -226,9 +226,6 @@ footer {
     font-size: 110%;
   }
 
-
-
-
   .bignews-container .container {
     flex-direction: row;
     justify-content: center;
@@ -239,7 +236,7 @@ footer {
 
   .bignews-container img {
     width: 60%;
-    margin-right: 16px;
+    margin-right: 20px;
   }
 
 /*   .bignews-container div {
