added links to news

--- a/code/style.css
+++ b/code/style.css
@@ -26,6 +26,7 @@ h2 {
   font-size: 48px;
   font-style: italic;
   margin: 0px;
+  color: #0f4c75;
 
 }
 
@@ -60,7 +61,7 @@ p {
   margin-top: 0px;
   display: flex;
   font-size: 18px;
-
+  color: #010038;
 
 }
 
@@ -121,11 +122,13 @@ a:hover {
   padding: 36px 36px 0px 36px;
   line-height: 1;
   color: #0f4c75;
+
 }
 
 .big-news-text:hover {
   background-color: white;
   opacity: 0.5;
+
 }
 
 
