--- a/code/style.css
+++ b/code/style.css
@@ -5,12 +5,16 @@
 }
 
 html {
+  height: 100%;
   background: #eaeff1;
   color: #000;
   font-family: 'Avenir', 'Helvetica', sans-serif;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   margin: 0;
 }
 
@@ -19,7 +23,8 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 2.2rem;
+  text-transform: uppercase;
+  font-size: 1.4rem;
 }
 
 h2 {
@@ -27,7 +32,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   margin-bottom: 0;
 }
 
@@ -62,6 +67,7 @@ img {
 header.site-header {
   display: flex;
   align-items: center;
+  flex: 0 0 auto;
   height: 80px;
   padding: 0 2rem; 
 
@@ -71,7 +77,6 @@ header.site-header {
 
 header.site-header > * {
   flex: 0 1 auto;
-  margin: 0;
 }
 
 .logo {
@@ -84,6 +89,7 @@ header.site-header > * {
 }
 
 nav.main-nav {
+  display: none;
   margin-left: auto;
 }
 
@@ -98,6 +104,11 @@ nav.main-nav a:hover {
   border-bottom: 2px solid #fff;
 }
 
+.nav-toggle {
+  width: 30px;
+  margin-left: auto;
+  cursor: pointer;
+}
 
 /* Featured article section */
 
@@ -181,6 +192,7 @@ footer {
   background-color: #0a2fc4;
   color: #fff;
   font-size: .8rem;
+  font-weight: bold;
 }
 
 
@@ -190,6 +202,14 @@ footer {
 @media screen and (min-width: 768px) {
   
   .site-title {
+    display: inline;
+  }
+
+  .nav-toggle {
+    display: none;
+  }
+
+  nav.main-nav {
     display: inline;
   }
 
