changed the color on the cards.

--- a/code/style.css
+++ b/code/style.css
@@ -83,6 +83,7 @@ color: #ffec34;
 .big-news div {
   display: flex;
   flex-direction: column;
+  floa
 }
 
 h2 {
@@ -113,7 +114,7 @@ h2 {
   width: 210px;
   height: 150px;
   padding: 15px;
-  background: rgb(194, 235, 194);
+  background: white;
   text-decoration: none;
   border-radius: 16px;
   margin: 10px;
